--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="one">
-            <img src="images/nav.png" class="nav-img">
+            <img src="nav.png" class="nav-img">
             <p>kiitan</p>
         </div>
         
@@ -58,15 +58,15 @@
 
 <div class="container">
     <div class="col-1">
-        <img src="images/chairs.png">
+        <img src="chairs.png">
     </div>
 
     <div class="col-2">
-        <img src="images/tables.png" class="tables">
-        <img src="images/bed.png" class="bed">
-        <img src="images/light.png" class="light">
-        <img src="images/wardrobe.png" class="wardrobe">
-        <img src="images/decoration.png" class="decoration">
+        <img src="tables.png" class="tables">
+        <img src="bed.png" class="bed">
+        <img src="light.png" class="light">
+        <img src="wardrobe.png" class="wardrobe">
+        <img src="decoration.png" class="decoration">
     </div>
 </div>
 
@@ -80,9 +80,9 @@
 </div>
 
 <div class="row-1">
-    <img src="images/odger.png" class="odger">
-    <img src="images/tossberg.png" class="toss">
-    <img src="images/leifarne.png" class="leifarne">
-    <img src="images/tossberg2.png" class="toss2">
+    <img src="odger.png" class="odger">
+    <img src="tossberg.png" class="toss">
+    <img src="leifarne.png" class="leifarne">
+    <img src="tossberg2.png" class="toss2">
 </div>
 </body>
