--- a/index.html
+++ b/index.html
@@ -1,88 +1,78 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>kiitan - Dashboard</title>
-    <link rel="stylesheet" href="main.css">
+    <meta name="viewport" content="width=device-width, initial scale=1.0">
+    <title>Kiitan test</title>
+    <link rel="stylesheet" href="other.css">
 </head>
 
 <body>
-   <div class="column-layout">
-    <div class="main-column">
-        <div class="wrapper">
-            <div class="search-box">
-                <div class="dropdown">
-                    <div class="default-option">All Categories</div>
-                    <ul>
-                        <li>All Categories</li>
-                        <li>Furniture</li>
-                        <li>Lights</li>
-                        <li>Decoration</li>
-                        <li>Accessories</li>
-                    </ul>
-                </div>
-                <div class="search-field">
-                    <input type="text" class="input" placeholder="Search...">
-                </div>
-            </div>
-        </div>
+    <div class="row">
+    <div class="col-9">
+        <h1><strong>Discover</strong> the best</h1>
 
-        <div class="one">
-            <img src="nav.png" class="nav-img">
-            <p>kiitan</p>
-        </div>
         
-        <div class="two">
-       <h2><b>Discover</b> the best</h2>
-       <p><a href="#">See More</a></p>
-    </div>
-   </div>
-   <div class="side-column">
-        <div class="box-1">
-            
+
+        <div class="grid-container">
+           <div class="chairs">chairs</div>
+           <div class="tables">tables</div>
+           <div class="bed">bed</div>
+           <div class="light">light</div>
+           <div class="wardrobe">wardrobe</div>
+           <div class="decoration">decoration</div>
         </div>
 
-        <div class="box-2">
+       <div class="kels">
+        <ul>
+        <li><a href="#" id="my-fav">My favorite</a></li>
+        <li><a href="#" id="prev">Previously viewed</a></li>
+        <li><a href="#" id="my-fav">Last bought</a></li>
+        <li><a href="#" id="see-more">See More</a></li>
+      </ul>
+      </div>
 
-        </div>
-
-        <div class="box-3">
-
-        </div>
-
-        <div class="box-4">
-
-        </div>
-   </div>
-</div>
-
-
-<div class="container">
-    <div class="col-1">
-        <img src="chairs.png">
+      <div class="grid-container-2">
+          <div class="odger">Odger Alice</div>
+          <div class="tossberg">Tossberg Gr</div>
+          <div class="leifarne">Leifarne</div>
+          <div class="tossberg-2">Tossberg BI</div>
+      </div>
     </div>
 
-    <div class="col-2">
-        <img src="tables.png" class="tables">
-        <img src="bed.png" class="bed">
-        <img src="light.png" class="light">
-        <img src="wardrobe.png" class="wardrobe">
-        <img src="decoration.png" class="decoration">
+    <div class="col-3">
+       <div class="aside">
+           <div id="box-1">
+               <div id="box-1-1"></div>
+               <p>Tossberg</p>
+               <p>$125.00 <span>Gray</span></p>
+            </div>
+           <div id="box-2"><div id="box-1-1"></div></div>
+           <div id="box-2"><div id="box-1-1"></div></div>
+           <div id="box-4">
+               <table>
+                   <tr>
+                       <td>Sub Total</td>
+                       <td>$820.00</td>
+                   </tr>
+
+                   <tr>
+                       <td>Shipment <a id="link" href="#">Check details</a></td>
+                       <td>$12.00</td>
+                   </tr>
+
+                   <tr id="t-3">
+                       <td>Discount <a id="link" href="#">Remove</a></td>
+                       <td>$10.00</td>
+                   </tr>
+
+                   <tr id="t-4">
+                       <td>Total</td>
+                       <td>$822.00</td>
+                   </tr>
+               </table>
+           </div>
+
+       </div>
     </div>
-</div>
-
-<div class="kels">
-    <ul>
-        <li><a href="#" class="my-fav">My favorite</a></li>
-        <li><a href="#" class="my-fav">Previously viewed</a></li>
-        <li><a href="#" class="my-fav">Last bought</a></li>
-        <li><a href="#" class="see-more">See More</a></li>
-    </ul>
-</div>
-
-<div class="row-1">
-    <img src="odger.png" class="odger">
-    <img src="tossberg.png" class="toss">
-    <img src="leifarne.png" class="leifarne">
-    <img src="tossberg2.png" class="toss2">
 </div>
 </body>
