--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 
 <body>
     <div class="row">
-    <div class="col-9">
-        <h1><strong>Discover</strong> the best</h1>
+    <div class="col-8">
+        <p class="strong"><strong>Discover</strong> the best</p>
 
         
 
         <div class="grid-container">
-           <div class="chairs">chairs</div>
-           <div class="tables">tables</div>
-           <div class="bed">bed</div>
-           <div class="light">light</div>
-           <div class="wardrobe">wardrobe</div>
-           <div class="decoration">decoration</div>
+           <div class="chairs"><p>Chairs <span class="number">353</span></p></div>
+           <div class="tables"><p>Tables <span class="number">5</span></p></div>
+           <div class="bed"><p>Bed <span class="number">48</span></p></div>
+           <div class="light"><p>Light <span class="number">157</span></p></div>
+           <div class="wardrobe"><p>Wardrobe <span class="number">112</span></p></div>
+           <div class="decoration"><p>Decoration <span class="number">96</span></p></div>
         </div>
 
        <div class="kels">
@@ -32,22 +32,27 @@
       </div>
 
       <div class="grid-container-2">
-          <div class="odger">Odger Alice</div>
-          <div class="tossberg">Tossberg Gr</div>
-          <div class="leifarne">Leifarne</div>
-          <div class="tossberg-2">Tossberg BI</div>
+          <div class="odger"><p>Odger Alice <br><span class="digits"><b>$86</b>.00</span></p></div>
+          <div class="tossberg"><p>Tossberg Gr <br><span class="digits"><b>$125</b>.00</span></p></div>
+          <div class="leifarne"><p>Leifarne <br><span class="digits"><b>$64</b>.00</span></p></div>
+          <div class="tossberg-2"><p>Tossberg BI <br><span class="digits"></b>$125</b>.00</span></p></div>
       </div>
     </div>
 
-    <div class="col-3">
+    <div class="col-4">
        <div class="aside">
            <div id="box-1">
                <div id="box-1-1"></div>
-               <p>Tossberg</p>
-               <p>$125.00 <span>Gray</span></p>
+               <p class="toss">Tossberg <br><span class="num"><b>$125</b>.00 <span id="gray">Gray</span></span></p>
             </div>
-           <div id="box-2"><div id="box-1-1"></div></div>
-           <div id="box-2"><div id="box-1-1"></div></div>
+           <div id="box-2">
+               <div id="box-1-1"></div>
+               <p class="chaise">Chaise Alice <br><span class="num"><b>$86</b>.00 <span id="gray">Rose</span></span></p>
+            </div>
+           <div id="box-2">
+               <div id="box-1-1"></div>
+               <p class="alice">Chaise Alice <br><span class="num"><b>$176</b>.00 <span id="gray">Dark Navy</span></span></p>
+            </div>
            <div id="box-4">
                <table>
                    <tr>
